305-IX. Про внесення змін до деяких законів України щодо удосконалення діяльності Державного бюро розслідувань

--- a/Регламенти/Регламент_Верховної_Ради_України.md
+++ b/Регламенти/Регламент_Верховної_Ради_України.md
@@ -3171,6 +3171,22 @@
 
 6. Питання про відповідальність Кабінету Міністрів України не може розглядатися Верховною Радою більше одного разу протягом однієї чергової сесії Верховної Ради, а також протягом року після схвалення Програми діяльності Кабінету Міністрів України.
 
+**Стаття 232-1.** Розгляд Верховною Радою звіту Директора Державного бюро розслідувань
+
+1. Верховна Рада один раз на рік розглядає звіт Директора Державного бюро розслідувань про результати діяльності цього органу за календарний рік, стан виконання покладених на нього завдань, додержання законодавства, прав і свобод людини і громадянина, а також напрями та шляхи підвищення ефективності діяльності Державного бюро розслідувань.
+
+Звіт подається Державним бюро розслідувань щороку до 1 квітня.
+
+2. Верховна Рада за пропозицією не менш як третини народних депутатів від конституційного складу Верховної Ради може в будь-який час прийняти рішення про позачерговий звіт Директора Державного бюро розслідувань з питань, зазначених у частині першій цієї статті.
+
+3. Звіт Директора Державного бюро розслідувань не пізніш як за 15 днів, а позачерговий звіт - не пізніш як за 5 днів до розгляду на пленарному засіданні Верховної Ради передається до комітету, до предмета відання якого належать питання правоохоронної діяльності, а також надається народним депутатам.
+
+4. Після заслуховування звіту Директора Державного бюро розслідувань та співдоповіді комітету Верховної Ради, до предмета відання якого належать питання правоохоронної діяльності, проводиться обговорення звіту.
+
+5. За підсумками обговорення звіту Верховна Рада приймає постанову про затвердження звіту та визнання роботи Директора Державного бюро розслідувань задовільною чи незадовільною.
+
+Визнання роботи Директора Державного бюро розслідувань незадовільною є підставою для звільнення зазначеної особи із займаної посади".
+
 ### Глава 39
 ### ПРОВЕДЕННЯ У ВЕРХОВНІЙ РАДІ УКРАЇНИ ПАРЛАМЕНТСЬКИХ СЛУХАНЬ
 
